@@ -2,4 +2,6 @@
 Simulateur WSN
 
 compiler et executer le fichier .jar :
-![image](https://github.com/Ziyad-Mabrouk/WSNSim/assets/125457402/879d4d28-4ff7-4aef-bf52-0edf59c0d41a)
+# java --module-path "...\path\to\javafx-sdk-...\lib" --add-modules javafx.controls,javafx.fxml -jar "...\path\to\WSNSim.jar"
+
+<img width="838" alt="image" src="https://github.com/Ziyad-Mabrouk/WSNSim/assets/125457402/b4ddfcf2-4a22-496d-9066-64aa5f9f1170">
